fixtures/benchmark/negatives/n07.py
documentation_example = "gpt-4-turbo"
